feat(reconcilation): Bot can now reconcile roles upon start up
* Add spring boot
* Bump libs
* Cleanup where necessary
* Tested against prod because YOLO